==> 4dragunov/leaksensor/src/boards/SRWLD01/rtc-board.c <==
#include <math.h>
#include <time.h>
#include <sys/time.h>
#include <stdint.h>
#include <stdbool.h>
#include <assert.h>
#include "stm32f1xx.h"
#include "utilities.h"
#include "delay.h"
#include "board.h"
#include "timer.h"
#include "systime.h"
#include "gpio.h"
#include "sysIrqHandlers.h"
#include "lpm-board.h"
#include "rtc-board.h"
#include "FreeRtos.h"
#include "task.h"
#include <stdio.h>
#define MIN_ALARM_DELAY                             1 // in msec
#define MIN_SLEEP_DELAY								1000
#define USEC_NUMBER                                 1000000
#define MSEC_NUMBER                                 ( USEC_NUMBER / 1000 )
#define COMMON_FACTOR                               3
#define CONV_NUMER                                  ( MSEC_NUMBER >> COMMON_FACTOR )
#define CONV_DENOM                                  ( 1 << ( N_PREDIV_S - COMMON_FACTOR ) )
#define DAYS_IN_LEAP_YEAR                           ( ( uint32_t )  366U )
#define DAYS_IN_YEAR                                ( ( uint32_t )  365U )
#define SECONDS_IN_1DAY                             ( ( uint32_t )86400U )
#define SECONDS_IN_1HOUR                            ( ( uint32_t ) 3600U )
#define SECONDS_IN_1MINUTE                          ( ( uint32_t )   60U )
#define MINUTES_IN_1HOUR                            ( ( uint32_t )   60U )
#define HOURS_IN_1DAY                               ( ( uint32_t )   24U )
#define  DAYS_IN_MONTH_CORRECTION_NORM              ( ( uint32_t )0x99AAA0 )

void RtcInit( void )
{
    RTC_DateTypeDef date;
    RTC_TimeTypeDef time;

    if( RtcInitialized == false )
    {
    	HAL_PWR_EnableBkUpAccess();
    	__HAL_RCC_PWR_CLK_ENABLE();
        __HAL_RCC_RTC_ENABLE( );

        if (HAL_RTCEx_BKUPRead( &RtcHandle, RTC_BKP_DR1 ) != 0xAA55) {
			RtcHandle.Instance            = RTC;
			RtcHandle.Init.AsynchPrediv   = RTC_AUTO_1_SECOND;  // RTC_ASYNCH_PREDIV;
			RtcHandle.Init.OutPut         = RTC_OUTPUTSOURCE_ALARM;
			HAL_RTC_Init( &RtcHandle );

			date.Year                     = 0;
			date.Month                    = RTC_MONTH_JANUARY;
			date.Date                     = 1;
			date.WeekDay                  = RTC_WEEKDAY_MONDAY;
			HAL_RTC_SetDate( &RtcHandle, &date, RTC_FORMAT_BIN );

			/*at 0:0:0*/
			time.Hours                    = 0;
			time.Minutes                  = 0;
			time.Seconds                  = 0;
			HAL_RTC_SetTime( &RtcHandle, &time, RTC_FORMAT_BIN );
			HAL_RTCEx_BKUPWrite( &RtcHandle, RTC_BKP_DR1, 0xAA55 );
        }

        HAL_RTC_DeactivateAlarm( &RtcHandle, RTC_ALARM_A );

        HAL_NVIC_SetPriority(RTC_IRQn, configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY + 1, 0);
        HAL_NVIC_EnableIRQ(RTC_IRQn);
        HAL_NVIC_SetPriority( RTC_Alarm_IRQn, configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY + 1, 0 );
        HAL_NVIC_EnableIRQ( RTC_Alarm_IRQn );
        __HAL_RTC_SECOND_ENABLE_IT(&RtcHandle, RTC_IT_SEC);
        // Init alarm.
        TimInit();
        RtcSetTimerContext( );

        RtcInitialized = true;
    }
}

void RtcSetAlarm( uint32_t timeout )
{
	struct timeval elapsed = RtcGetTimerElapsedTime();
    // We don't go in Low Power mode for timeout below MIN_ALARM_DELAY
    if( ( int64_t )MIN_SLEEP_DELAY < ( int64_t )( timeout - (elapsed.tv_sec * 1000) ) )
    {
        LpmSetStopMode( LPM_RTC_ID, LPM_ENABLE );
    }
    else
    {
        LpmSetStopMode( LPM_RTC_ID, LPM_DISABLE );
    }

    if(timeout >= 1000) {
    	DBG("timer plan rtc: %li\n", timeout);
		RtcStartAlarm( timeout );
    }
    else {
    	DBG("timer plan tim: %li\n", timeout);
		TimStartAlarm( timeout );
    }
}

void RtcStartAlarm( const uint32_t timeoutMs )
{
	uint32_t seconds = timeoutMs / 1000;
	uint32_t milliseconds = timeoutMs % 1000;

    RtcStopAlarm( );

    CRITICAL_SECTION_BEGIN( );
     /* Convert time in seconds */
    if(RtcAcquireAccess()){
    	 gettimeofday(&RtcTimerContext.Time, NULL);
    	 DBG("S:%li US:%li\n", (uint32_t)RtcTimerContext.Time.tv_sec, (uint32_t)RtcTimerContext.Time.tv_usec);
		if (seconds) {
		  uint16_t realtimeoutMs = (seconds* 1000) + (1000 -  (RtcTimerContext.Time.tv_usec / 1000));
		  DBG("Real timeout before correction : %i\n", realtimeoutMs);
		  seconds += (realtimeoutMs > timeoutMs)?  -1 : 0;
		  realtimeoutMs = (seconds* 1000) + (1000 -  (RtcTimerContext.Time.tv_usec / 1000));
		  if(realtimeoutMs < 1000) {
			  //Disable STOP mode if real stop time will be  bellow 1 sec
			  LpmSetStopMode( LPM_RTC_ID, LPM_DISABLE );
		  }
		  DBG("Real timeout after correction : %i\n", realtimeoutMs);
		  //shift for current timer
		  seconds += RtcTimerContext.Time.tv_sec;
		  /* Set RTC COUNTER MSB word */
		  WRITE_REG(RTC->ALRH, ( seconds >> 16U));
			 /* Set RTC COUNTER LSB word */
		  WRITE_REG(RTC->ALRL, ( seconds & RTC_ALRL_RTC_ALR));
		  __HAL_RTC_ALARM_CLEAR_FLAG(&RtcHandle, RTC_FLAG_ALRAF);
		  /* Configure the Alarm interrupt */
		  __HAL_RTC_ALARM_ENABLE_IT(&RtcHandle, RTC_IT_ALRA);
		  /* RTC Alarm Interrupt Configuration: EXTI configuration */
		  __HAL_RTC_ALARM_EXTI_ENABLE_IT();
		  __HAL_RTC_ALARM_EXTI_ENABLE_RISING_EDGE();
		  DBG("start rtc\n");
		}
		else {
			RTC->ALRH = 0;
			RTC->ALRL = 0;
			if(milliseconds) {
				TimStartAlarm(milliseconds);
			}
		}
		RtcReleaseAccess();
    }else {
			DBG("Error enter rtc init\n");
		}
    CRITICAL_SECTION_END( );
}

void RTC_IRQHandler(void)
{
	if (__HAL_RTC_SECOND_GET_IT_SOURCE(&RtcHandle, RTC_IT_SEC) &&
	    __HAL_RTC_SECOND_GET_FLAG(&RtcHandle, RTC_FLAG_SEC)) {
		if(!__HAL_RTC_SECOND_GET_FLAG(&RtcHandle, RTC_FLAG_OW))
		{
			/* Second callback */
			assert(1);
		}
		else {
			/* Second error */
			DBG("RTC overflow\n");
			/* Clear flag Second */
			__HAL_RTC_OVERFLOW_CLEAR_FLAG(&RtcHandle, RTC_FLAG_OW);
		}
		/* Clear flag Second */
		__HAL_RTC_SECOND_CLEAR_FLAG(&RtcHandle, RTC_FLAG_SEC);
	}
}
